--- a/index.html
+++ b/index.html
@@ -5,12 +5,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css"> -->
     <link rel="stylesheet" href="style/style.css">
     <title>Document</title>
 </head>
 
 <body>
+    <header class="header">
+        <nav class="nav">
+            <a href="#" class="nav__logo">LOGO</a>
 
+            <div class="navmenu">
+                <div class="search">
+                    <input placeholder="Buscador" type="text" name="" id="" class="search__input">
+                    <button type="submit" class="search__btn">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
+                </div>
+
+                <ul class="menu">
+                    <li class="menu__item">
+                        <a href="#" class="menu__item__link">
+                            <i class="fa-solid fa-user"></i>
+                        </a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__item__link">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <section class="banner">
+
+        </section>
+    </main>
+
+    <script src="https://kit.fontawesome.com/44980252ee.js" crossorigin="anonymous"></script>
     <script src="script/script.js"></script>
 </body>
 
