agregada seccion productos

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <li class="menu__item">
                         <a href="#" class="menu__item__link">
                             <i class="fa-solid fa-cart-shopping"></i>
+                            <span class="cart__num">0</span>
                         </a>
                     </li>
                 </ul>
@@ -41,9 +42,96 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main">
         <section class="banner">
+            <img class="banner__img" src="img/banner.png" alt="banner">
+        </section>
 
+        <section class="productos">
+            <div class="productos__contenedor">
+                <div class="productos__cart">
+                    <img class="productos__cart__img" src="img/productos/iphone__12__black.png" alt="iphone 12 negro">
+                    <div class="productos__cart__text">
+                        <p class="productos__cart__text__price">$9999,99</p>
+                        <h3 class="productos__cart__text__title">Iphone 12</h3>
+                        <ul class="productos__cart__text__description">
+                            <li>Pantalla: Retina 6,1"</li>
+                            <li>Procesador: A15 Bionic</li>
+                            <li>Ram: 4GB</li>
+                            <li>Camara: 12mpx</li>
+                        </ul>
+                        <div class="productos__cart__text__button">
+                            <button class="productos__cart__text__button__add">
+                                <i class="fa-solid fa-cart-plus"></i>
+                                Comprar
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="productos__contenedor">
+                <div class="productos__cart">
+                    <img class="productos__cart__img" src="img/productos/iphone__12__black.png" alt="iphone 12 negro">
+                    <div class="productos__cart__text">
+                        <p class="productos__cart__text__price">$9999,99</p>
+                        <h3 class="productos__cart__text__title">Iphone 12</h3>
+                        <ul class="productos__cart__text__description">
+                            <li>Pantalla: Retina 6,1"</li>
+                            <li>Procesador: A15 Bionic</li>
+                            <li>Ram: 4GB</li>
+                            <li>Camara: 12mpx</li>
+                        </ul>
+                        <div class="productos__cart__text__button">
+                            <button class="productos__cart__text__button__add">
+                                <i class="fa-solid fa-cart-plus"></i>
+                                Comprar
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="productos__contenedor">
+                <div class="productos__cart">
+                    <img class="productos__cart__img" src="img/productos/iphone__12__black.png" alt="iphone 12 negro">
+                    <div class="productos__cart__text">
+                        <p class="productos__cart__text__price">$9999,99</p>
+                        <h3 class="productos__cart__text__title">Iphone 12</h3>
+                        <ul class="productos__cart__text__description">
+                            <li>Pantalla: Retina 6,1"</li>
+                            <li>Procesador: A15 Bionic</li>
+                            <li>Ram: 4GB</li>
+                            <li>Camara: 12mpx</li>
+                        </ul>
+                        <div class="productos__cart__text__button">
+                            <button class="productos__cart__text__button__add">
+                                <i class="fa-solid fa-cart-plus"></i>
+                                Comprar
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="productos__contenedor">
+                <div class="productos__cart">
+                    <img class="productos__cart__img" src="img/productos/iphone__12__black.png" alt="iphone 12 negro">
+                    <div class="productos__cart__text">
+                        <p class="productos__cart__text__price">$9999,99</p>
+                        <h3 class="productos__cart__text__title">Iphone 12</h3>
+                        <ul class="productos__cart__text__description">
+                            <li>Pantalla: Retina 6,1"</li>
+                            <li>Procesador: A15 Bionic</li>
+                            <li>Ram: 4GB</li>
+                            <li>Camara: 12mpx</li>
+                        </ul>
+                        <div class="productos__cart__text__button">
+                            <button class="productos__cart__text__button__add">
+                                <i class="fa-solid fa-cart-plus"></i>
+                                Comprar
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
