Añadidas animaciones banner

--- a/index.html
+++ b/index.html
@@ -43,8 +43,13 @@
     </header>
 
     <main class="main">
-        <section class="banner">
-            <img class="banner__img" src="img/banner.png" alt="banner">
+        <section class="carousel">
+            <div class="carousel__container">
+                <img class="carousel__container__img" src="img/banner.png" alt="banner">
+                <img class="carousel__container__img" src="img/banner.png" alt="banner">
+            </div>
+            <button class="btn__scr__izq">scroll izq</button>
+            <button class="btn__scr__der">scroll der</button>
         </section>
 
         <section class="productos">
